🔧 refactor(nuxt.config.ts): add srcDir to defineNuxtConfig to specify source directory 🎨 style(index.html, projects.html, work.html): add animate-opacity class to main tag for smoother transitions 📝 docs(index.md): add new markdown file to document code portfolio 🔧 refactor(main.js): modify href in anchor tag to correct path 🎨 style(style.css): add animate-opacity animation for smoother transitions ✨ feat(vercel.json): add new file to enable clean URLs 🔧 refactor(work.html): update job title and add new responsibilities The source directory is now specified in the nuxt.config.ts file, which helps Nuxt.js to locate the source files of the project. The animate-opacity class has been added to the main tags in the HTML files to provide smoother transitions when navigating the site. A new markdown file has been added to document the code portfolio, providing a detailed overview of the projects. The href in the anchor tag in main.js has been corrected to point to the correct path. The animate-opacity animation has been added to style.css for smoother transitions across the site. A new file, vercel.json, has been added to enable clean URLs, improving the readability and SEO of the site. Finally, the job title and responsibilities in work.html have been updated to reflect recent changes.

--- a/src/style.css
+++ b/src/style.css
@@ -245,3 +245,7 @@ footer a {
     }
 
 }
+
+/* Animation */
+.animate-opacity{animation:opac 0.72s}
+@keyframes opac{from{opacity:0} to{opacity:1}}
